--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -20,7 +20,8 @@ ul {
 
 li {
   list-style: none;
-  margin-left: 30px;
+  margin-right: 30px;
+  
 }
 
 li:first-child {
@@ -80,6 +81,12 @@ aside {
   display: flex;
   flex: 1;
 }
+
+/* .dark{
+  background: #38383a;
+  color: whitesmoke;
+} */
+
 @media (min-width: 900px) {
   .blog_wrapper {
     max-width: 70vw;
